# royak

./: .gitignore  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  royak.service  test-build.sh  test-demo.sh  test-ha-lease.sh  test-ingress.sh  test-load.sh  test-mesh-macos.sh  test-mesh.sh  test-multinode.sh  test-neuropod.sh  test-raft-cluster.sh
.github/workflows/: ci.yml  release.yml
demo-site/: Dockerfile  README.md  deploy.yaml  entrypoint.sh  index.html
docs/: CNAME  index.html
examples/: advanced-pipeline.yaml  autoscale.yaml  complete.yaml  config.yaml  full-app.yaml  full-stack.yaml  function.yaml  guard.yaml  healthcheck.yaml  jobs.yaml  nginx-with-limits.yaml  nginx.yaml  persistent.yaml  pipeline.yaml  rbac-roles.yaml  redis-operator.yaml  rolling-update-v2.yaml  rolling-update.yaml  sidecar.yaml
mcp/: royak.py
src/: api.rs  brain.rs  cluster_mesh.rs  consensus.rs  dashboard.html  docker.rs  flows.rs  main.rs  mesh_crypto.rs  microvm.rs  net_security.rs  neural_state.rs  raft_node.rs  reconcile.rs  runtime.rs  servicelb.rs  spec.rs
