[package]
name = "royak"
version = "0.4.0-beta.1"
edition = "2021"
description = "Royak — container orchestrator in a single tiny binary: deployments, rolling updates, services, RBAC, kubectl compatibility"
authors = ["Ivo Gergov", "Velko"]

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
rustc-hash = "2.1"
rayon = "1.10"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
rcgen = "0.13"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
futures-core = "0.3"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
libc = "0.2"
openraft = { version = "0.9", features = ["serde", "serde_json"] }
openraft-memstore = "0.9"
anyerror = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
